--- a/Labs/lab2 - bootstrap/bootstrap.ipynb
+++ b/Labs/lab2 - bootstrap/bootstrap.ipynb
@@ -411,14 +411,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 159,
+      "execution_count": 172,
       "metadata": {},
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "(30.483956962025317, 29.126582278481013, 31.83575949367088)\n"
+            "(30.478896202531647, 29.139240506329113, 31.82278481012658)\n"
           ]
         }
       ],
@@ -429,32 +429,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 160,
+      "execution_count": 173,
       "metadata": {},
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "(20.14919437751004, 19.634538152610443, 20.67871485943775)\n"
+            "(20.14540562248996, 19.630522088353413, 20.670682730923694)\n"
           ]
         }
       ],
       "source": [
-        "# The 95% confidence interval for the mean of the new fleet in the vehicles dataset using 10000 iteration\n",
+        "# The 80% confidence interval for the mean of the old fleet in the vehicles dataset using 10000 iterations\n",
         "print(bootstrap_mean_ci(dataCurr, dataCurr.shape[0], 10000, 80))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 161,
+      "execution_count": 165,
       "metadata": {},
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "(6.401168032637492, 6.060462109494779, 6.699561030072073)\n"
+            "(6.403453906523209, 6.0580251347981156, 6.707287589717202)\n"
           ]
         }
       ],
