Final run of the quiz.

--- a/Labs/lab2 - bootstrap/bootstrap.ipynb
+++ b/Labs/lab2 - bootstrap/bootstrap.ipynb
@@ -237,19 +237,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "(5.695484656519851, 3.0338229402279002, 7.121485875303479)\n"
+            "(5.701155138931344, 2.747842347341993, 7.346142926971252)\n"
           ]
         }
       ],
       "source": [
-        "print(bootstrap_std_ci(data, data.shape[0], 10000, 90))"
+        "# The 95% confidence interval for the mean of the customers dataset using 10000 iterations.\n",
+        "print(bootstrap_std_ci(data, data.shape[0], 10000, 95))"
       ]
     },
     {
@@ -380,57 +381,82 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 26,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "(30.482702531645568, 29.11392405063291, 31.82278481012658)\n"
+            "(30.481624050632913, 29.618987341772154, 31.354430379746834)\n"
           ]
         }
       ],
       "source": [
-        "# The 95% confidence interval for the mean of the new fleet in the vehicles dataset using 10000 iteration\n",
-        "print(bootstrap_mean_ci(dataNew, dataNew.shape[0], 10000, 95))"
+        "# The 80% confidence interval for the mean of the new fleet in the vehicles dataset using 10000 iterations\n",
+        "print(bootstrap_mean_ci(dataNew, dataNew.shape[0], 10000, 80))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 29,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "(20.14384417670683, 19.622489959839356, 20.662650602409638)\n"
+            "(6.4045797246087535, 5.815098929373256, 6.947393261079218)\n"
           ]
         }
       ],
       "source": [
-        "# The 80% confidence interval for the mean of the old fleet in the vehicles dataset using 10000 iterations\n",
-        "print(bootstrap_mean_ci(dataCurr, dataCurr.shape[0], 10000, 80))"
+        "# The 95% confidence interval for the mean of the old fleet in the vehicles dataset using 10000 iterations\n",
+        "print(bootstrap_std_ci(dataCurr, dataCurr.shape[0], 10000, 95))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 28,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "(6.399288347168303, 6.06524910038339, 6.700267009617946)\n"
+            "(6.068725233623959, 5.530108989003134, 6.511607104114728)\n"
           ]
         }
       ],
       "source": [
         "# The 73% confidence interval for the standard deviation of the old fleet in the vehicles dataset using 10000 iterations\n",
-        "print(bootstrap_std_ci(dataCurr, dataCurr.shape[0], 10000, 73))"
+        "print(bootstrap_std_ci(dataNew, dataNew.shape[0], 10000, 73))"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 27,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "(30.47627341772152, 29.911392405063292, 31.050632911392405)\n"
+          ]
+        }
+      ],
+      "source": [
+        "#The 60% confidence interval for the mean of the new fleet in the vehicles dataset using 10000 iterations\n",
+        "print(bootstrap_mean_ci(dataNew, dataNew.shape[0], 10000, 60))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
