--- a/Project/assignment.ipynb
+++ b/Project/assignment.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,8 +51,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Replace the filepath with the complete path to where the file was downloaded."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +223,7 @@
        "4  {'from': {'table_units': [['table_unit', 0]], ...  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +353,7 @@
        "total_sum       243"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +506,7 @@
        "26  {'from': {'table_units': [['table_unit', 1]], ...  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +616,7 @@
        "<AxesSubplot:xlabel='query_toks'>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -632,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -827,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -844,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -886,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -922,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -966,9 +973,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of training instances: 185 // Max length of questions: 43 // Number of tokens in dictionary: 526\n"
+     ]
+    }
+   ],
    "source": [
     "# Create cubes and populate them with the one-hot encoding.\n",
     "encoder_input_cube_test = np.zeros((len(nl_questions_test), max_question_len_test, num_nl_tokens_test), dtype=\"float32\")\n",
@@ -986,7 +1001,9 @@
     "    for j, token in enumerate(query):\n",
     "        decoder_input_cube_test[i, j, sql_tokens_index_test[token]] = 1.0\n",
     "        if j > 0:\n",
-    "            decoder_output_cube_test[i, j - 1, sql_tokens_index_test[token]] = 1.0"
+    "            decoder_output_cube_test[i, j - 1, sql_tokens_index_test[token]] = 1.0\n",
+    "\n",
+    "print(\"Number of training instances: %d // Max length of questions: %d // Number of tokens in dictionary: %d\" % (len(encoder_input_cube_test), len(encoder_input_cube_test[0]), len(encoder_input_cube_test[0][0])))"
    ]
   }
  ],
