Improves documentation in README file and final changes in the Jupyter Notebook.

--- a/Project/assignment.ipynb
+++ b/Project/assignment.ipynb
@@ -84,7 +84,7 @@
     }
    ],
    "source": [
-    "df = pd.read_json(open(\"/Users/Enterprise/Desktop/OneDrive/Essex/Modules/DataScience/DataScience_CE888_2022/Project/spider/train_spider.json\", \"r\", encoding=\"utf8\"))\n",
+    "df = pd.read_json(open(\"\", \"r\", encoding=\"utf8\"))\n",
     "\n",
     "df.info()"
    ]
